--- a/src/App.css
+++ b/src/App.css
@@ -179,6 +179,7 @@
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
     .login-btn {
         -webkit-appearance: none;
+        appearance: none;
     }
 }
 
